--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NotesListActivity">
-
+    tools:context=".NoteActivity"
+    android:background="@color/lightYellow">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -15,22 +16,21 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/notes_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways">
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary">
+
+            <include layout="@layout/layout_note_toolbar" />
 
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/recyclerView"
-        android:padding="5dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:id="@+id/note_text"
+        android:textSize="23dp"
+        android:textColor="@color/black"
+        android:padding="5dp"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
