custom-edit-text

--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -25,12 +25,13 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <EditText
+    <com.mmz.LineEditText
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/note_text"
         android:textSize="23dp"
         android:textColor="@color/black"
-        android:padding="5dp"/>
+        android:padding="5dp"
+        android:gravity="top"/>
 
 </LinearLayout>
