--- a/app/src/main/res/layout/layout_note_list_item.xml
+++ b/app/src/main/res/layout/layout_note_list_item.xml
@@ -27,9 +27,8 @@
 
     <View
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@color/mediumYellow" />
+        android:layout_height="10dp"
+        android:layout_weight="4"/>
 
     <TextView
         android:id="@+id/note_timestamp"
